Adicionando itens a tag main e estiliziando

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,6 +2,8 @@
 
 :root {
     --header-color: #000;
+    --h1-color:#393c41;
+    --h2-color:#6E7378
 }
 
 /* FONTES */
@@ -94,4 +96,31 @@ main {
     background-size: cover;
     background-position: center;
     height:100vh;
+}
+
+main .info {
+    height:45vh;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
+}
+
+main h1{
+    margin: 0;
+    font-size:40px;
+    font-weight:normal;
+    color: var(--h1-color)
+}
+
+main h2 {
+    margin: 0;
+    font-size: 14px;
+    font-weight:normal;
+    font-family: 'GothamBook',helvetica,arial;
+    color: var(--h2-color)
+
+}
+main h2 a {
+    color: var(--h1-color)
 }
