--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,7 +3,11 @@
 :root {
     --header-color: #000;
     --h1-color:#393c41;
-    --h2-color:#6E7378
+    --h2-color:#6E7378;
+    --btn-dark-bg: rgba(23, 26, 32, 0.8 );
+    --btn-light-bg:rgba(255,255,255,0.65);
+    --btn-dark-color:#FFF;
+    --btn-ligth-color:#000;
 }
 
 /* FONTES */
@@ -123,4 +127,39 @@ main h2 {
 }
 main h2 a {
     color: var(--h1-color)
+}
+
+/* FOOTER */
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 30px;
+    right: 0;
+}
+footer .buttons--area{
+    display:flex;
+    justify-content: center;
+}
+
+footer .buttons--area a {
+    display:block;
+    width: 220px;
+    text-align: center;
+    text-decoration: none;
+    text-transform:uppercase;
+    font-size: 12px;
+}
+
+footer .btn--dark {
+    background-color:var(--btn-dark-bg);
+    color: var(--btn-dark-color);
+
+}
+
+
+footer .btn--light {
+    background-color: var(--btn-light-bg);
+    color: var(--btn-ligth-color);
+    
 }
