--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -149,6 +149,9 @@ footer .buttons--area a {
     text-decoration: none;
     text-transform:uppercase;
     font-size: 12px;
+    padding: 15px;
+    border-radius:30px;
+    margin: 0 10px; 
 }
 
 footer .btn--dark {
@@ -157,9 +160,33 @@ footer .btn--dark {
 
 }
 
-
 footer .btn--light {
     background-color: var(--btn-light-bg);
-    color: var(--btn-ligth-color);
-    
+    color: var(--btn-ligth-color);   
+}
+
+footer .arrow--area {
+    display:flex;
+    justify-content: center;
+    margin-top:30px;
+    height:30px;
+}
+
+@keyframes arrow {
+    0% {
+        margin-top: 0px;
+    }
+    50% {
+        margin-top: 15px;
+    }    
+    100% {
+        margin-top:0%;
+    }
+}
+
+footer .arrow{
+    height:15px;
+    animation-name: arrow;
+    animation-duration:2s;
+    animation-iteration-count: infinite;
 }
