deixando site responsivo para tablet

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -190,3 +190,19 @@ footer .arrow{
     animation-duration:2s;
     animation-iteration-count: infinite;
 }
+
+/* MEDIA QUERIES */
+
+@media (max-width:1200px) {
+    header .middle {
+        display:none;
+    }
+    header .rightside li {
+        display:none;
+    }
+
+    header .rightside li.menu{
+        display: block;
+        margin-right: 20px;
+    }
+}
