--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -206,3 +206,14 @@ footer .arrow{
         margin-right: 20px;
     }
 }
+
+@media (max-width:600px){
+    footer .buttons--area{
+        flex-direction: column;
+        align-items: center;
+    }
+    footer .buttons--area a {
+        margin: 10px 10px;
+        width:calc(100vw - 60px);
+    }
+}
